--- a/src/main/res/xml/provide_paths.xml
+++ b/src/main/res/xml/provide_paths.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <paths>
-        <cache-path path="" name="captured_image" />
+        <cache-path
+            name="captured_image"
+            path="" />
     </paths>
 </resources>
